# DANA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: documentation.md
include/: CustomTypes.h  FileScheduler.h  FileScraper.h  Logger.h
include/sinks/: Sink.h  SinkHandle.h
libs/: FileScheduler.cpp  FileScraper.cpp  Logger.cpp  Sink.cpp  SinkHandle.cpp
tests/: IT_Pipeline.cc  T_Run.cc  UT_FileScheduler.cc  UT_FileScraper.cc  UT_Logger.cc  UT_Run.cc  UT_Sink.cc  UT_SinkHandler.cc
